tests/snapshots/parser_snapshots__parser_all@ast-46.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/string_literal_is_scanned.of
---
Err(
    "unexpected token string literal",
)
