tests/snapshots/parser_snapshots__parser_all@ast-48.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/token_position_line_and_column_are_updated.of
---
Err(
    "unexpected token identifier 'foo'",
)
