tests/snapshots/parser_snapshots__parser_all@ast-49.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/unexpected_character_returns_error.of
---
Err(
    "unexpected character '@'",
)
