tests/snapshots/parser_snapshots__parser_all@ast-50.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/lexer/whitespace_only_returns_eof.of
---
Ok(
    Program {
        items: [],
    },
)
