tests/snapshots/parser_snapshots__parser_all@ast-52.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/parser/parse_error_unexpected_token_at_item.of
---
Err(
    "unexpected token integer '42'",
)
