tests/snapshots/parser_snapshots__parser_all@ast-56.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/parser/parse_empty_program.of
---
Ok(
    Program {
        items: [],
    },
)
