tests/snapshots/parser_snapshots__parser_all@ast-59.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/parser/parse_expr_binary_precedence.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "test",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: None,
                        params: [],
                        body: Some(
                            Block {
                                statements: [
                                    Expr(
                                        BinaryOp(
                                            Variable(
                                                "x",
                                            ),
                                            Add,
                                            BinaryOp(
                                                Variable(
                                                    "y",
                                                ),
                                                Mul,
                                                Variable(
                                                    "z",
                                                ),
                                            ),
                                        ),
                                    ),
                                ],
                                returns: None,
                            },
                        ),
                        span: Span {
                            line: 1,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
