tests/snapshots/parser_snapshots__parser_all@ast-6.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/06_unions.of
---
Err(
    "unexpected token 'if'",
)
